--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>文本加密工具</title>
     <link rel="stylesheet" href="css/main.css">
-    <!-- Alpine.js CDN -->
-    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.13.3/dist/cdn.min.js"></script>
+    <!-- Alpine.js 本地文件 -->
+    <script defer src="lib/alpine.min.js"></script>
 </head>
 <body>
     <div class="container" x-data="encryptApp">
