--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>文本加密工具</title>
     <link rel="stylesheet" href="css/main.css">
-    <!-- Alpine.js 本地文件 -->
+    <!-- Alpine.js 本地文件1 -->
     <script defer src="lib/alpine.min.js"></script>
 </head>
 <body>
