--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="main-actions">
                     <button class="action-btn decrypt-btn" @click="pasteAndDecrypt">
                         <span class="btn-icon">🔓</span>
-                        <span class="btn-text">解密</span>
+                        <span class="btn-text">粘贴并解密</span>
                     </button>
                     <button class="action-btn encrypt-btn" @click="processMessage" :disabled="!inputText">
                         <span class="btn-icon">🔒</span>
